--- a/style.css
+++ b/style.css
@@ -1,16 +1,8 @@
 
-/*LÄGG TILL KOMMENTERAR*/
-
-
-
 body {
-  padding: 0;
   background: #EAE0D5;
-  width: 100%;
-}
-
-main{
-  margin: 0 auto 50px;
+  color: #EAE0D5;
+  font-family: 'Raleway', sans-serif;
   width: 100%;
 }
 
@@ -22,82 +14,73 @@ header {
     "nav nav";
   grid-template-columns: .6fr 4fr;
   background-color: #3f8150;
-  height: auto;
-  width: 100%;
-  background-position: center ;
-  text-align: center;
-  color:#EAE0D5;
 }
 
-footer{
+footer,footer p,address{
   background-color: #644a4d;
-  padding: 3rem;
-}
-
-footer span, footer p{
   color: #EAE0D5;
 }
 
-address{
-  background-color: #644a4d;
-}
-
-                    /* Type */
-h1 {
-  color: #EAE0D5;
-  font-family: 'Covered By Your Grace', sans-serif;
-  font-size: 50px;
-  font-weight: 500;
-  line-height: 76px;
-  margin: 0;
-  grid-column: 1/-1;
-  grid-area: head;
-  text-align: center;
-  padding: 1%;
-  letter-spacing: 0.5rem;
+/* Type */
+h1,h2{
+  font-family: 'Covered By Your Grace';
   max-width: fit-content;
-  padding: 1rem;
+}
 
+h1, .main2 h3, a,.main2 h3,textarea#comment{
+  padding: 1rem;
+}
+
+h2,h3, a, .wrap label{
+  font-weight: 600;
+}
+
+h2, a{
+  text-transform: uppercase;
+}
+
+h2,.section1,.section2,#header3 h1,.wrap,textarea#comment{
+  justify-self: center;
+}
+
+h3,.info h4,#header3 h1, #header3 h2,.wrap {
+  text-align: center;
+}
+
+h3,h4,h5,h6{
+  color: #41292C;
+}
+    
+.section1,.section2,.wrap,footer,footer p,address{
+  padding: 2rem;
+}
+
+h1 {
+  font-size: 50px;
+  line-height: 76px;
+  letter-spacing: 0.5rem;
+  
 }
 
 h2 {
-  color: #EAE0D5;
-  font-family: 'Raleway', sans-serif;
   font-size: 35px;
-  font-weight: 600;
-  text-align: center;
-  text-transform: uppercase;
-  max-width: fit-content;
-  justify-self: center;
-  margin-top: 2vh;
-  margin-bottom: 2vh;
+  margin: 2vh;
   grid-area: menu;
 }
 
-h3 {
-  color: #41292C;
-  font-family: 'Raleway', sans-serif;
-  font-size: 25px;
-  font-weight: 500;
-  text-align: center;
-}
 
 h4 {
-  font-family: 'Raleway', sans-serif;
   font-size: 28px;
   font-weight: 700;
   line-height: .2em;
 }
 
+
 p {
   color: #222222;
-  width: 80%;
-  font-family: 'Raleway', sans-serif;
-  font-size: 22px;
-  font-weight: 100;
   padding: 10px 0;
   line-height: 40px;
-  justify-self: center;
+  font-size:18px;
 }
 
                     /* Page elements */
@@ -106,11 +89,6 @@ img{
   width: 100%;
   opacity: 0.8;
   display:flex;
-  flex-basis: 50%;
-  max-width: 300px;
-  height:300px;
-  justify-self: right;
-  margin-right: 10%;
 }
 
 #logo{
@@ -121,19 +99,11 @@ img{
   clip-path: circle(45%);
   scale: .8;
   max-width: 140px;
-
 }
 
 ul {
-  margin: 0 auto;
-  padding: 0;
-  width: 100%;
   display: flex;
   justify-content: right;
-}
-
-li{
-  list-style: none;
 }
 
 section li {
@@ -144,30 +114,16 @@ section li {
 
 a {
   color: #EAE0D5;
-  font-family: 'Raleway', sans-serif;
-  font-size: 16px;
-  font-weight: 700;
-  text-align: left;
-  text-transform: uppercase;
   text-decoration: none;
   letter-spacing: 0.1rem;
 }
 
 nav{
-  display: flex;
-  justify-content: right;
-  text-align: center;
-  grid-area: nav;
-}
-
-nav li{
-  display: inline;
+  grid-area:nav;
 }
 
 nav li a{
   display: inline-block;
-  padding: 1rem;
-  
 }
 
 nav li a:hover{
@@ -178,13 +134,13 @@ nav li a:hover{
 /* HOME PAGE 1*/
 
 .main1{
+  margin: 0 auto 50px;
   max-width: 90%;
   display: grid;
 }
 
 .main1 h3{
   font-size: 20px;
-  font-weight: 600;
   line-height: 70px;
   padding-top: 2%;
   letter-spacing: 0.4rem;
@@ -194,14 +150,7 @@ img#bageri{
   min-width: 80vw;
   min-height: 70vh;
   border-radius: 2rem;
-  margin: auto;
   padding-bottom: 1rem;
-  justify-self: center;
-}
-
-.main1 p{
-  padding-bottom: 3rem;
-  width: 90%;
 }
 
 figure{
@@ -216,13 +165,7 @@ figure{
   grid-template-columns: 1fr 1fr;
   gap: 2rem;
   align-items: center;
-  justify-self: center;
-  padding: 2rem;
   width: 90%;
-}
-
-.section1 {
-  direction: ltr;
 }
 
 .section2 {
@@ -230,23 +173,17 @@ figure{
 }
 
 .section1 img,.section2 img {
-  width: 100%;
-  margin: 0;
   max-width: 700px;
-  height: auto;
   border-radius: 1rem;
   object-fit: cover;
-  justify-self: self-start;
 }
 
 .section1 .txt,.section2 .txt {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   gap: 1rem;
   max-height: 40vh;
 }
-
 
 .txt h4{
   font-size: 20px;
@@ -254,17 +191,13 @@ figure{
 
 .txt p{
   overflow-y: auto;
-  font-size:18px;
-  min-width: fit-content;
 }
-
 
 /* MENU PAGE 2*/ 
 
 .main2 h3{
   font-size: 30px;
   text-align: left;
-  padding:1rem;
   max-width:fit-content;
   border-radius: 1rem;
   margin-top: 3rem;
@@ -275,14 +208,11 @@ figure{
 
 .sweets{
   display:grid;
-  /* per row adjustable */
-  /*grid-template-columns:repeat(auto-fill, minmax(250px, 1fr));*/
   grid-auto-flow: column;
   column-gap: 5rem;
   position: relative;
   justify-items: center;
   padding: .8rem;
-  /*enables scrolling*/
   overflow-x: auto;
   max-inline-size:fit-content;
 }
@@ -300,18 +230,18 @@ figure{
 .info{
   display: grid;
   padding: .5rem .5rem;
-  grid-template-rows:auto auto ;
   grid-row-gap:.3rem;
   width:max-content;
   max-height: min-content;
   margin: 8%;
   box-shadow: 0 0 1rem;
   border-radius: 0.8rem;
+  color:#222222;
+  
 }
 
 .info h4{
   margin-top: 3%;
-  text-align: center;
   line-height: normal;
   font-size: 22px;
 }
@@ -319,10 +249,6 @@ figure{
 .info h5{
   text-align: right;
   margin: 0;
-}
-
-.info p{
-  align-self: stretch;
 }
 
 .info button{
@@ -338,7 +264,6 @@ figure{
 body.review{
   background:linear-gradient( #3f8150,#EAE0D5 ) ;
   display: grid;
-  justify-content: center;
   align-items: center;
   min-height: 100vh;
 }
@@ -352,13 +277,11 @@ body.review{
 
 #header3 h1{
   margin: 3rem; 
-  justify-self: center;
 }
 
 #header3 h1, #header3 h2{
   color: #EAE0D5;
   font-weight: 500;
-  text-align: center;
   animation: slide-up .8s ease;
   animation: scale-up .8s ease; 
 }
@@ -380,13 +303,10 @@ a#back, .btn.submit, .btn.cancel{
   display: grid;
   grid-template-columns: auto;
   background-color:#EAE0D5;
-  padding: 2rem;
   max-width: 600px;
   width: 100%;
   height: min-content;
   border-radius: .75rem;
-  text-align: center;
-  justify-self: center;
   animation: slide-up .8s ease;
   animation: scale-up .8s ease; 
 }
@@ -396,29 +316,22 @@ a#back, .btn.submit, .btn.cancel{
 
 .wrap label{
   font-size: 1.5rem;
-  font-weight: 600;
   animation: scale-up .8s ease;
   color: #644a4d;
   grid-area: 1 / 1 / 2 / 6;
 }
 
 textarea#comment {
-  display: flex;
-  flex-basis: 100%;
-  padding: 1rem;
   border-radius: .5rem;
   border: 1px solid #ccc;
-  justify-self: center;
   margin: 0.5rem;
 }
 
 .rating{
-  user-select: none;
   display: grid;
   grid-template-columns: auto auto auto auto auto;
-  grid-template-rows: auto;
+  grid-template-rows: auto auto;
   justify-content: center;
-  align-items: center;
   font-size: 1.5rem;
   animation: slide-up .8s ease;
 }
@@ -428,7 +341,6 @@ textarea#comment {
   color: #FF9B29;
   background-color: unset;
   border: none;
-  margin-bottom: 0;
 }
 
 .star :hover{
@@ -438,7 +350,6 @@ textarea#comment {
 h3.score{
   grid-area: 3 / 3 / 4 / 4;
   margin-bottom: 1rem;
-  color:#644a4d;
 }
 
 
@@ -528,6 +439,5 @@ h3.score{
   body {
     outline: 5px solid red;
   }
-
   
 }
